use of bootstrap tools for visible-dekstop and fix of some things
improvements of contact & skills page

--- a/css/less/contact.less
+++ b/css/less/contact.less
@@ -40,12 +40,21 @@
 		{
 			color:@google;
 		}
+	}	
+	.skype
+	{
+		color:@gray;
+		&:hover
+		{
+			color: #007fff;
+		}
 	}
 	[data-icon]:before
 	{
 		font-size: 25px;
 		margin-right: 10px;
 	}
+
 }
 .mail a
 {
