--- a/css/style.css
+++ b/css/style.css
@@ -8698,6 +8698,12 @@ you can use the generic selector below, but it's slower:
 .coordinates .google:hover {
   color: #c92b16;
 }
+.coordinates .skype {
+  color: #555555;
+}
+.coordinates .skype:hover {
+  color: #007fff;
+}
 .coordinates [data-icon]:before {
   font-size: 25px;
   margin-right: 10px;
@@ -8707,15 +8713,6 @@ you can use the generic selector below, but it's slower:
 }
 .mail a:hover {
   color: #007fff;
-}
-#avatar {
-  width: 140px !important;
-  border-radius: 50%;
-}
-@media (max-width: 980px) {
-  #avatar {
-    display: none;
-  }
 }
 /*--------------------------*/
 /* navbar */
